Bug fix: hide border of sidebar when collapsed (display:none)

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -35,6 +35,7 @@ $content-padding-horizontal: 20px !default;
 
     &.collapsed {
         width: $tab-size;
+        display: none;
     }
 
     @media(min-width:$threshold-sm) {
